flux-snapshot/2023-04-20-22-51-07-exit101
    Updating crates.io index
    Checking sorting v0.1.0 (/Users/cole/scratch/flux/flux-demos/sorting)
error[E0425]: cannot find function `make_range` in this scope
  --> src/sort.rs:42:29
   |
42 |         let bigger_values = make_range(lo + 1, hi);
   |                             ^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `sorting` (bin "sorting") due to previous error
